@@ -1,3 +1,15 @@
+2007-11-22  George Staikos  <staikos@kde.org>
+
+        Reviewed by Simon Hausmann <hausmann@kde.org>.
+
+        Fix license headers
+        
+
+        * Api/qwebobjectplugin.cpp:
+        * Api/qwebobjectplugin.h:
+        * Api/qwebobjectpluginconnector.cpp:
+        * Api/qwebobjectpluginconnector.h:
+
 2007-11-22  Simon Hausmann  <hausmann@kde.org>
 
         Reviewed by George Staikos <staikos@kde.org>.
